// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxShadow renders 0 1`] = `
Array [
  .c0 {
  box-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders function 1`] = `
Array [
  .c0 {
  box-shadow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders invalid theme path 1`] = `
Array [
  .c0 {
  box-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders negative number 1`] = `
Array [
  .c0 {
  box-shadow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-shadow: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-shadow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-shadow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-shadow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-shadow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-shadow: July;
}

@media May {
  .c0 {
    box-shadow: August;
  }
}

@media April {
  .c0 {
    box-shadow: September;
  }
}

@media January {
  .c0 {
    box-shadow: November;
  }
}

@media April {
  .c0 {
    box-shadow: August;
  }
}

@media June {
  .c0 {
    box-shadow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: July;
}

@media May {
  .c0 {
    box-shadow: August;
  }
}

@media April {
  .c0 {
    box-shadow: September;
  }
}

@media January {
  .c0 {
    box-shadow: November;
  }
}

@media April {
  .c0 {
    box-shadow: August;
  }
}

@media June {
  .c0 {
    box-shadow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-shadow: November;
  }
}

@media April {
  .c0 {
    box-shadow: January;
  }
}

@media January {
  .c0 {
    box-shadow: December;
  }
}

@media April {
  .c0 {
    box-shadow: April;
  }
}

@media June {
  .c0 {
    box-shadow: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-shadow: November;
  }
}

@media April {
  .c0 {
    box-shadow: January;
  }
}

@media January {
  .c0 {
    box-shadow: December;
  }
}

@media April {
  .c0 {
    box-shadow: April;
  }
}

@media June {
  .c0 {
    box-shadow: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-shadow: July;
  }
}

@media April {
  .c0 {
    box-shadow: August;
  }
}

@media January {
  .c0 {
    box-shadow: September;
  }
}

@media April {
  .c0 {
    box-shadow: November;
  }
}

@media June {
  .c0 {
    box-shadow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-shadow: July;
  }
}

@media April {
  .c0 {
    box-shadow: August;
  }
}

@media January {
  .c0 {
    box-shadow: September;
  }
}

@media April {
  .c0 {
    box-shadow: November;
  }
}

@media June {
  .c0 {
    box-shadow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-shadow: January;
  }
}

@media April {
  .c0 {
    box-shadow: December;
  }
}

@media January {
  .c0 {
    box-shadow: April;
  }
}

@media April {
  .c0 {
    box-shadow: May;
  }
}

@media June {
  .c0 {
    box-shadow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-shadow: January;
  }
}

@media April {
  .c0 {
    box-shadow: December;
  }
}

@media January {
  .c0 {
    box-shadow: April;
  }
}

@media April {
  .c0 {
    box-shadow: May;
  }
}

@media June {
  .c0 {
    box-shadow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders postitive number 1`] = `
Array [
  .c0 {
  box-shadow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders string 1`] = `
Array [
  .c0 {
  box-shadow: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxShadow renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxShadow renders valid theme path 1`] = `
Array [
  .c0 {
  box-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-shadow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
